--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,20 @@
 <html>
   <head>
     <title>MetPetDB Bulk Upload</title>
+    <script type="text/javascript" src="/static/js/file_select.js"></script>
+    <script type="text/javascript" src="/static/js/jquery-1.12.0.min.js"></script>
   </head>
   <body>    
-    <script src="/static/js/file_select.js" type="text/javascript"></script>
     <form>
       <fieldset>
         <legend>Bulk Upload</legend>
-        <input type="button" value="Choose File" onclick="GetFileURL()"><br>
-        <input type="radio" name="type" value="Samples">Samples<br>
-        <input type="radio" name="type" value="ChemicalAnalyses">Chemical Analyses<br>
-        <input type="radio" name="type" value="Images">Images<br>
-        <input type="submit" value="Parse file for upload">
+        <input type="button" value="Choose File" id="a" onclick="GetFileURL()">
+          <div style="display:inline" id="CheckOrX"></div><br>
+        Selected URL: <div style="display:inline" id="URLEntered"></div><br>
+        <input type="radio" name="type" id="Samples">Samples<br>
+        <input type="radio" name="type" id="ChemicalAnalyses">Chemical Analyses<br>
+        <input type="radio" name="type" id="Images">Images<br>
+        <input type="submit" value="Parse file for upload" onclick="ParseFileForUpload()">
       </fieldset>
     </form>
   </body>    
