--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <script type="text/javascript" src="/static/js/jquery-1.12.0.min.js"></script>
   </head>
   <body>    
-    <form action="test" method="post">
+    <form>
       <fieldset>
         <legend>Bulk Upload</legend>
         <input type="button" value="Choose File" id="a" onclick="GetFileURL()">
